--- a/CriminalIntent/res/layout-land/fragment_crime.xml
+++ b/CriminalIntent/res/layout-land/fragment_crime.xml
@@ -4,20 +4,47 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-
-    <TextView
-        style="?android:listSeparatorTextViewStyle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/crime_title_label" />
-
-    <EditText
-        android:id="@+id/crime_title"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:hint="@string/crime_title_hint" />
+    
+	<LinearLayout
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:orientation="horizontal"
+         android:layout_marginLeft="16dp"
+         android:layout_marginTop="16dp" >
+         
+         <LinearLayout
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:orientation="vertical"
+             android:layout_marginRight="4dp">
+             
+             <ImageButton android:id="@+id/crime_imageButton"
+                 android:layout_width="match_parent"
+                 android:layout_height="wrap_content"
+                 android:src="@android:drawable/ic_menu_camera" />         
+         </LinearLayout>
+         
+         <LinearLayout
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:orientation="vertical"
+             android:layout_weight="1" >
+	    
+		    <TextView
+		        style="?android:listSeparatorTextViewStyle"
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:text="@string/crime_title_label" />
+		
+		    <EditText
+		        android:id="@+id/crime_title"
+		        android:layout_width="match_parent"
+		        android:layout_height="wrap_content"
+		        android:layout_marginLeft="16dp"
+		        android:layout_marginRight="16dp"
+		        android:hint="@string/crime_title_hint" />
+	    </LinearLayout>
+	</LinearLayout>
 
     <TextView
         style="?android:listSeparatorTextViewStyle"
@@ -46,5 +73,4 @@
             android:text="@string/crime_solved_label" />
 
     </LinearLayout>
-
 </LinearLayout>
